webbook text align fixed and delete button added

--- a/styles/webbook.scss
+++ b/styles/webbook.scss
@@ -11,12 +11,34 @@ body{
             flex-wrap: wrap;
             padding:3rem 2rem;
             .webpage{
+                position: relative;
                 @include display_as_column_center;
                 background-color:$apple-blue;
                 margin:10px;
                 border-radius: 5px;
                 box-shadow: 1px 1px 10px $gray;
+                &:hover{
+                    i{
+                        display:block;
+                    }
+                }
 
+                i{
+                    display:none;
+                    font-style: normal;
+                    position: absolute;
+                    top:0;
+                    right:0;
+                    padding: 5px 10px;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    color:white;
+                    &:hover{
+                        background:$black;
+                        color:red;
+
+                    }
+                }
                 a,section{
                     background-color:$white;
                     border-radius: 50%;
@@ -26,7 +48,11 @@ body{
                     margin:15px;
                     color:$black;
                     text-decoration: none;
-                    font-size: 12px;
+                    font-size: 13px;
+                    font-weight: bold;
+                    p{
+                        text-align: center;
+                    }
                 }
               
             }
@@ -75,7 +101,7 @@ body{
                 padding: 5px 10px;
             }
             input{
-                width:260px;
+                width: 245px
             }
             button{
                 // border: 2px solid $black;
@@ -88,7 +114,7 @@ body{
                 @include display_as_row_space_between;
             }
             ::placeholder{
-                font-size: 10px;
+                font-size: 12px;
             }
         }
         // .webpage_editing::after{
